SR-8510: Fixed code review issues